# BD-project

./: .gitignore  README.md  municipal.sql  sp.sql  teste.sql
app/src/: app.py  conf.ini  pyproject.toml
app/src/persistence/: booking.py  payment.py  session.py  sessionn.py  user.py
app/src/sql/: drop.sql
app/src/templates/: base.html
app/src/templates/balance/: payments_list.html
app/src/templates/partials/: booking_result.html
app/src/templates/person/: new_person_form.html
app/src/templates/session/: _list_partial.html  booking_cart.html  booking_cart_items.html  session_details.html  session_list.html
app/src/templates/user/: new_user_form.html  user.html
doc/: projectBD_DER.drawio  projectBD_ER.drawio
sql/: dummy_inserts.sql  sp.sql
src/: app.py  notes.txt  pyproject.toml
src/persistence/: booking.py  payment.py  person.py  session.py  sessionn.py  user.py
src/routes/: balance.py  bookings.py  sessions.py
src/sql/: drop.sql  dummy_inserts.sql  municipal.sql  sp.sql  trigger.sql  udf.sql
src/templates/: index.html
src/templates/balance/: balance.html  payments_list.html
src/templates/booking/: booking_details.html  booking_list.html
src/templates/partials/: booking_cart.html
src/templates/person/: person.html  person_list.html
src/templates/session/: booking_cart_items.html  session.html  session_list.html
src/templates/user/: user.html  user_list.html
