[project]
name = "bd-project"
version = "0.1.0"
description = "Bases de Dados - Projecto Final"
authors = [
    "Marta Cruz <marta.dias.cruz@ua.pt>", "Pedro Martins <pedropmartins@ua.pt>"
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "bd_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
